hphp/hack/test/typecheck/reactive/print_in_rx4.php
<?hh // strict
<<__RxShallow>>
function f()[rx_shallow]: void {
  // should be error
  echo 1;
}
